feat: add base64 data
Signed-off-by: Appadoo Apoorva Srinivas <apoorva.appadoo@orange.com>